--- a/NookFitApp/package.json
+++ b/NookFitApp/package.json
@@ -15,7 +15,8 @@
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
     "react": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "^0.72.4",
+    "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.2",
@@ -29,7 +30,9 @@
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/jest": "^29.5.4",
     "@types/react": "^18.0.24",
+    "@types/react-native": "^0.72.2",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
