--- a/NookFitApp/package.json
+++ b/NookFitApp/package.json
@@ -10,10 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.3",
     "@react-native-picker/picker": "^2.5.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
+    "graphql": "^16.8.0",
     "react": "18.2.0",
     "react-native": "^0.72.4",
     "react-native-dotenv": "^3.4.9",
