--- a/NookFitApp/package.json
+++ b/NookFitApp/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.3",
+    "@apollo/link-context": "^2.0.0-beta.3",
+    "@react-native-community/slider": "^4.4.3",
     "@react-native-picker/picker": "^2.5.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
