--- a/NookFitApp/package.json
+++ b/NookFitApp/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.5.0",
     "graphql": "^16.8.0",
     "react": "18.2.0",
     "react-native": "^0.72.4",
